--- a/index.html
+++ b/index.html
@@ -5,24 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link href="./index.css" type="stylesheet"/>
-  <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link href="index.css" rel="stylesheet">
+  <!--Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Montserrat&family=Outfit:wght@400;700&family=Poppins:wght@200;300;500;600&family=Yeseva+One&display=swap" rel="stylesheet">
+  <title>QR code</title>
 </head>
 <body>
 
-  Improve your front-end skills by building projects
+  <div class="container">
+    <img src="./images/image-qr-code.png" alt="qr code to visit frontendmentor.com"/>
+    <div class="title">Improve your front-end skills by building projects</div>
+    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  </div>
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+  
+
   
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Salif Tankoano</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> 
+    Coded by <a href="https://www.linkedin.com/in/salif-tankoano/" target="_blank">Salif Tankoano</a>
   </div>
 </body>
 </html>
